2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp, src/main_window.cpp, src/main_window.h: Cleanups.

2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* src/config.cpp, src/endpoint.cpp, src/gnomemeeting.cpp, 
	src/main_window.cpp, src/main_window.h, src/urlhandler.cpp: Removed
	toolbar.h from the headers. Added function to update the Control Panel
	Section menu and use it in the notifiers.

2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* po/POTFILES.in: Removed toolbar.*.

	* src/toolbar.*: Removed those files and integrated the code into
	main_window.cpp.

	* Makefile.am: Removed toolbar.*.
	
	* src/common.h, src/gnomemeeting.cpp, src/main_window.cpp: Code
	cleanups and GMObjectification.

2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* po/POTFILES.in: Fixed #151424 again.

2004-08-30  Damien Sandras  <dsandras@gnome.org>

	* po/POTFILES.in: Fixed #151424.

2004-08-29  Damien Sandras  <dsandras@gnome.org>

	* po/POTFILES.in: Added missing files to translate.

	* src/addressbook_window.cpp: Do not call an user when you are already
	in a call.

	* src/callbacks.cpp, src/callbacks.h, src/chat_window.cpp, 
	src/endpoint.cpp, src/endpoint.h, src/lid.cpp, src/main_window.cpp,
	src/main_window.h, src/toolbar.cpp: More GMObject work for pausing
	the channels.

2004-08-28  Damien Sandras  <dsandras@gnome.org>

	* src/callbacks.cpp, src/callbacks.h, src/lid.cpp, src/main_window.cpp, 
	src/main_window.h: More work on the separation UI/Endpoint, more 
	cleanups.

2004-08-26  Damien Sandras  <dsandras@gnome.org>

	* src/callbacks.cpp, src/common.h, src/endpoint.cpp, 
	src/gdkvideoio.cpp, src/gnomemeeting.cpp, src/main_window.cpp:
	Fixed bugs in previous commit.

2004-08-26  Damien Sandras  <dsandras@gnome.org>

	* configure.in, src/callbacks.cpp, src/endpoint.cpp, src/endpoint.h:
	Incremented version number. Updated API to know if call hold worked
	or not.

2004-08-26  Damien Sandras  <dsandras@gnome.org>
