@@ -1,5 +1,9 @@
 2004-08-30  Damien Sandras  <dsandras@gnome.org>
 
+	* src/config.cpp: Minor change in comment.
+
+2004-08-30  Damien Sandras  <dsandras@gnome.org>
+
 	* src/config.cpp, src/main_window.cpp, src/main_window.h: Cleanups.
 
 2004-08-30  Damien Sandras  <dsandras@gnome.org>
